--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a ref="./recipes/crepes.html">Basic Crepes</a>
     </body>
 </html>
