Add additional recipe information
Adds photo of finished product, ingredients
and required steps

--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -6,5 +6,25 @@
 </head>
 <body>
     <h1>Basic Crepes</h1>
+    <img src="../img/crepes.jpg" alt="Image of crepes">
+    <h2>Description</h2>
+    <p>These are delicious french style crapes that can easily be made from home. Light, airy and perfect morning snacks!</p>
+    <p> I generally make these crepes on a professional crepe maker but that doesn't need to be the case. In the past, I have made them in a simple skillet.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup all-purpose flour</li>
+        <li>2 eggs</li>
+        <li>1/2 cup milk</li>
+        <li>1/2 cup water</li>
+        <li>1/4 teaspon salt</li>
+        <li>2 tablespoons of butter, melted</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a large mixing bowl, whisk together the flour and the eggs. Gradually add in the milk and water, stirring to combine. Add the salt and butter; beat until smooth.</li>
+        <li>Heat a lightly oiled griddle or frying pan over medium high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each crepe. 
+            Tilt the pan with a circular motion so that the batter coats the surface evenly.</li>
+        <li>Cook the crepe for about 2 minutes, until the bottom is light brown. Loosen with a spatula, turn and cook the other side. Serve ho</li>
+    </ol>
 </body>
 </html>
