Add two new recipes
Recipes for a simple hamburger and a
bowl of cereal added with links on
the homepage.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/crepes.html">Basic Crepes</a>
+        <ul>
+        <li><a href="./recipes/crepes.html">Basic Crepes</a></li>
+        <li><a href="./recipes/burgers.html">Burger</a></li>
+        <li><a href="./recipes/cereal.html">Cereal</a></li>        
+        </ul>
     </body>
 </html>
